--- a/team.html
+++ b/team.html
@@ -201,7 +201,7 @@
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">五十嵐 宇晴</h4><br>
 											<div style='text-align: center;'>
-												<h7 class='scroll_item_subttl'>副代表/設計責任者</h7>
+												<h7 class='scroll_item_subttl'>副代表/<br>設計責任者</h7>
 											</div>
 									</div>
 							</a>
@@ -214,12 +214,12 @@
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">ユング 開</h4><br>
 											<div style='text-align: center;'>
-												<h7 class='scroll_item_subttl'>フレーム設計</h7>
+												<h7 class='scroll_item_subttl'>フレーム設計<br>　</h7>
 											</div>
 									</div>
 							</a>
 					</li>
-				 <li class="scroll_item" style="margin-right: 0%;">
+				 <li class="scroll_item">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
 											<img src="img/profile/田渕宏太朗.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
@@ -227,27 +227,27 @@
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">田渕 宏太朗</h4><br>
 											<div style='text-align: center;'>
-												<h7 class='scroll_item_subttl'>プロペラ・翼設計</h7>
+												<h7 class='scroll_item_subttl'>プロペラ・翼設計<br>　</h7>
 											</div>
 									</div>
 							</a>
 					</li>
+					<li class="scroll_item" style="margin-right: 0%;">
+ 							<a class="scroll_item_inr">
+ 									<div class="scroll_item_thum">
+ 											<img src="img/profile/徐立元.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+ 									</div>
+ 									<div class="scroll_item_info">
+ 											<h4 class="scroll_item_ttl"> 徐 立元</h4><br>
+ 											<div style='text-align: center;'>
+ 												<h7 class='scroll_item_subttl'>機体最適化<br>シミュレーション</h7>
+ 											</div>
+ 									</div>
+ 							</a>
+ 					</li>
 			</ul>
-			<p class="memberKindText">翼班</p>
+			<p class="memberKindText">電装班</p>
 			<ul class="scroll_lst3">
-				 <li class="scroll_item">
-							<a class="scroll_item_inr">
-									<div class="scroll_item_thum">
-											<img src="img/profile/徐立元.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
-									</div>
-									<div class="scroll_item_info">
-											<h4 class="scroll_item_ttl"> 徐 立元</h4><br>
-											<div style='text-align: center;'>
-												<h7 class='scroll_item_subttl'>機体最適化<br>シミュレーション</h7>
-											</div>
-									</div>
-							</a>
-					</li>
 				 <li class="scroll_item">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
@@ -261,7 +261,7 @@
 									</div>
 							</a>
 					</li>
-					<li class="scroll_item" style="margin-right: 0%;">
+					<li class="scroll_item">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
 											<img src="img/profile/高橋唯基.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
@@ -274,13 +274,23 @@
 									</div>
 							</a>
 					</li>
-			</ul>
-			<p class="memberKindText">電装班</p>
-			<ul class="scroll_lst4">
 					<li class="scroll_item">
+ 							<a class="scroll_item_inr">
+ 									<div class="scroll_item_thum">
+ 											<img src="img/profile/仮.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+ 									</div>
+ 									<div class="scroll_item_info">
+ 											<h4 class="scroll_item_ttl">西田 圭吾</h4><br>
+ 											<div style='text-align: center;'>
+ 												<h7 class='scroll_item_subttl'>センサ・<br>コントロール機構設計</h7>
+ 											</div>
+ 									</div>
+ 							</a>
+ 					</li>
+					<li class="scroll_item" style="margin-right: 0%;">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
-											<img src="img/profile/八木拓真.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+											<img src="img/profile/仮.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 									</div>
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">八木 拓真</h4><br>
@@ -290,35 +300,9 @@
 									</div>
 							</a>
 					</li>
-				 <li class="scroll_item">
-							<a class="scroll_item_inr">
-									<div class="scroll_item_thum">
-											<img src="img/profile/仮.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
-									</div>
-									<div class="scroll_item_info">
-											<h4 class="scroll_item_ttl">西田 圭吾</h4><br>
-											<div style='text-align: center;'>
-												<h7 class='scroll_item_subttl'>センサ・<br>コントロール機構設計</h7>
-											</div>
-									</div>
-							</a>
-					</li>
-				 <li class="scroll_item" style="margin-right: 0%;">
-							<a class="scroll_item_inr">
-									<div class="scroll_item_thum">
-											<img src="img/profile/仮.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
-									</div>
-									<div class="scroll_item_info">
-											<h4 class="scroll_item_ttl">蟻生 開人</h4><br>
-											<div style='text-align: center;'>
-												<h7 class='scroll_item_subttl'>センサ・<br>コントロール機構設計</h7>
-											</div>
-									</div>
-							</a>
-					</li>
 			</ul>
 				<p class="memberKindText">広報班</p>
-				<ul class="scroll_lst5">
+				<ul class="scroll_lst4">
 			      <li class="scroll_item">
 			          <a class="scroll_item_inr">
 			              <div class="scroll_item_thum">
@@ -397,22 +381,9 @@
 	 		              </div>
 	 		          </a>
 	 		      </li>
-						<li class="scroll_item" style="margin-right: 0%;">
-	 		          <a class="scroll_item_inr">
-	 		              <div class="scroll_item_thum">
-	 		                  <img src="img/profile/矢嶋花菜.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
-	 		              </div>
-	 		              <div class="scroll_item_info">
-	 		                  <h4 class="scroll_item_ttl">矢嶋 花菜</h4><br>
-												<div style='text-align: center;'>
-													<h7 class='scroll_item_subttl'>SNS担当<br>　</h7>
-												</div>
-	 		              </div>
-	 		          </a>
-	 		      </li>
 					</ul>
-					<p class="memberKindText">フェアリング班</p>
-					<ul class="scroll_lst6">
+					<p class="memberKindText">組立班</p>
+					<ul class="scroll_lst5">
 				      <li class="scroll_item">
 				          <a class="scroll_item_inr">
 				              <div class="scroll_item_thum">
@@ -452,7 +423,7 @@
 				              </div>
 				          </a>
 				      </li>
-				     <li class="scroll_item" style="margin-right: 0%;">
+				     <li class="scroll_item">
 				          <a class="scroll_item_inr">
 				              <div class="scroll_item_thum">
 				                  <img src="img/profile/依田和樹.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
@@ -465,6 +436,19 @@
 				              </div>
 				          </a>
 				      </li>
+							<li class="scroll_item" style="margin-right: 0%;">
+		 		          <a class="scroll_item_inr">
+		 		              <div class="scroll_item_thum">
+		 		                  <img src="img/profile/矢嶋花菜.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+		 		              </div>
+		 		              <div class="scroll_item_info">
+		 		                  <h4 class="scroll_item_ttl">矢嶋 花菜</h4><br>
+													<div style='text-align: center;'>
+														<h7 class='scroll_item_subttl'>SNS担当<br>　</h7>
+													</div>
+		 		              </div>
+		 		          </a>
+		 		      </li>
 						</ul>
 					<a target="_blank" href="http://masason-foundation.org/">
 						<img src="http://drive.google.com/uc?export=view&id=1Km7t9N3ayqyxIwBaLCUDvVoBsnVnaj9F" class='MasasonHP'>
