--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<p class="submenuSubtitle">チーム概要</p>
 					<div class="punctuation"></div><br>
 					<img src="http://drive.google.com/uc?export=view&id=1NB7t4yfc13PdI7I20oqY6Gfy6Y5AKKZo" class="topOutlinePicture"><br>
-					<p class="subtitlesContents">　孫正義育英財団 Thunderbirdsには、それぞれのチームで活躍する多彩なメンバーが所属しております。　　　　　 　　　　　　 </p>
+					<p class="subtitlesContents">　孫正義育英財団 Thunderbirdsには、それぞれの班で活躍する多彩なメンバーが所属しております。　　　　　 　　　　　　 </p>
 					<div class="punctuation1"></div><br>
 					<a href="team.html" class="showAll">〉詳しくはこちら</a>
 					<div class="punctuation" style="margin-top: 10px;top: 4000px;"></div>
@@ -112,7 +112,7 @@
 			<div class="outline_back">
 				<div style="text-align: left;position: absolute;left: 0px;top: 120px;transform: skew(0deg, 5deg);width: 100%;height: 300px;">
 					<p class="outlineTitleJapanese">お問い合わせ</p><br>
-					<p class="outlineContents">Email:  masason.birdmen@gmail.com<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。</p><br>
+					<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。</p><br>
 					 <a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 60%;"></a>
 					 <p class='snsIconText'>孫正義育英財団公式アカウント</p>
 					 <a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="img/icons/twitterIcon.png" class="snsIcons"></a>
