--- a/aircraftData.html
+++ b/aircraftData.html
@@ -22,6 +22,14 @@
 	<link href="css/aircraftData.css" rel="stylesheet">
 </head>
 <body>
+		<script type="text/javascript">
+			if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('iPad') == -1) || navigator.userAgent.indexOf('iPod') > 0 || navigator.userAgent.indexOf('Android') > 0) {
+				// スマホ用のページにリダイレクトする
+				location.href = '/sp/aircraftData.html';
+			}else{
+				console.log('pc');
+			}
+		</script>
 		<img src="http://drive.google.com/uc?export=view&id=1wDILssMikBwXfstIp-nz2bhPWFRVIJIj" class="titlePicture">
 		<div class="header">
 			<nav>
