--- a/sp/index.html
+++ b/sp/index.html
@@ -44,7 +44,7 @@
 			<br><hr><br>
 		</div>
 	<!-- ↑↑↑メニュー↑↑↑ -->
-			<div style="background: hsl(0, 1%, 96%); overflow: hidden;margin-top: 100vh;">
+			<div style="background: hsl(0, 1%, 96%); overflow: hidden;margin-top: 145vw;">
 				<br><br>
 				<p class="top-beta-content"> 私たちは、「鳥人間コンテスト2019」への出場を通して、それぞれの想いを体現しようとしているチームです。<br> 2018年に結成され、メンバーは孫正義育英財団生有志で構成されています。</p>
 				<div class="submenu">
@@ -57,7 +57,7 @@
 					<div class="punctuation" style="margin-top: 10px;top: 4000px;"></div>
 					<br>
 				</div>
-				<div class="submenu" style="margin-bottom: 10%;">
+				<div class="submenu">
 					<p class="submenuSubtitle">ブログ</p>
 					<div class="punctuation"></div><br>
 					<img src="http://drive.google.com/uc?export=view&id=1VRclGWr51us8M027cCwbfaSZJHMf3CGM" class="topOutlinePicture"><br>
@@ -67,7 +67,7 @@
 					<div class="punctuation" style="margin-top: 10px;top: 4000px;"></div>
 					<br>
 				</div>
-				<div class="submenu">
+				<div class="submenu" style="margin-bottom: 27vw;">
 					<p class="submenuSubtitle">機体情報</p>
 					<div class="punctuation"></div><br>
 					<img src="http://drive.google.com/uc?export=view&id=1tXNJTnCTAmvZon_S3u2iz0DVdNJH0whn" class="topOutlinePicture"><br>
