--- a/sp/team.html
+++ b/sp/team.html
@@ -49,26 +49,26 @@
 				<p style="color: #FF857A;font-size: 2vw;margin-left: 10%;">　リーダーたちの想い</p>
 			</div>
 			<div class="aboutDiv">
-				<img src="img/profile/諸澤.png" alt="" class="aboutPicturesRight">
-				<div class="aboutTextRight_div">
-					<p class="aboutTextRight">
+				<img src="img/profile/諸澤.png" alt="" class="aboutPictures">
+				<div class="aboutText_div">
+					<p class="aboutText">
 						孫正義育英財団の1期生となった2017年7月から、多様な分野で活躍する財団生たちと出会い、彼ら彼女らから幾度となく刺激を受け、その度に心が躍った。それと同時に、「ここで出会った仲間たちと何か面白いことができないものか」と考えるようになっていた。<br>そんな中、偶然テレビで「鳥人間コンテスト2018」を見かけた。そこには、参加チームそれぞれの熱いストーリーがあった。私もかけがえのない仲間たちと空を目指し、唯一無二のストーリーを作りたい。そう思った瞬間、財団生たちの顔が頭に浮かんだ。空を目指せる仲間がいた。そうして、このチームは発足した。<br><br>私たち「孫正義育英財団 Thunderbirds」は、この夏、琵琶湖で「空を飛ぶこと」に本気で挑戦します。<br>
 					</p>
 				</div>
 			</div>
 			<div class="aboutDiv">
-				<img src="img/profile/大澤.png" alt="" class="aboutPicturesLeft">
-				<div class="aboutTextLeft_div">
-					<p class="aboutTextLeft">
+				<img src="img/profile/大澤.png" alt="" class="aboutPictures">
+				<div class="aboutText_div">
+					<p class="aboutText">
 						僕の成し遂げたい志は、ドラえもんをつくること。小学生の頃からその思いをずっと持ち続けてきた。<br>僕は空を飛びたいと思ったことはなかった。いきなり訳も分からず「やってくれ」と言われ、当初はピンとこず、本気で言っているのかと探り探りだった。振り返ればあの頃は、財団の全員がお互いに探り探りだった。自分だけやる気になって、周りがついてこなかったらやるせない。そんな感じがしていた。<br>でも、ある時なぜだかわからないが、僕はこう思った。<br>「自分が先陣を切って本気になって、その本気さでみんなを本気にしよう。」<br>僕が自転車を漕いで、プロペラが回って、飛行機の動力を生んで飛ぶのではなく、僕が自転車を漕ぐ本気さで、人が回って、チームの動力を生んで空を飛ぶ。そんなことができたら、ドラえもんをつくる最大の武器を手に入れられる気がしたのだ。
 					</p>
 				</div>
 			</div>
 
 			<div class="aboutDiv">
-				<img src="img/profile/五十嵐.png" alt="" class="aboutPicturesRight">
-				<div class="aboutTextRight_div">
-					<p class="aboutTextRight">
+				<img src="img/profile/五十嵐.png" alt="" class="aboutPictures">
+				<div class="aboutText_div">
+					<p class="aboutText">
 						頭で思い描く「アイデア」や形を持たない「かたち」、これらに「形」を与え、マテリアリティを帯びた「もの」として現実世界に呼び出す「ものづくり」という営みは、強大な「力」である。人が望むありようにリアルを改変するこの営為は、その強大さゆえときに暴力ともなり得る。<br>この「力」がもつ可能性は果てしない。その強大さを飼いならしたとき、幾億年の進化の過程を一足飛びに、人は空をも飛べてしまうのだから。<br>その計り知れない強大さに、尻込みしてしまう
 						こともある。しかし、一人ではとても手に負えないようなこの「力」にも、共に歩む仲間がいれば、立ち向かえるかもしれない。心から信頼できる仲間の存在こそが、その暴力性に飲み込まれないための大きな希望である。<br>孫正義育英財団という場所で最高の仲間と巡り合った私は、彼ら彼女らと共にこの「力」に挑むことを決めた。
 					</p>
