--- a/article.html
+++ b/article.html
@@ -7,7 +7,7 @@
 	<link href="css/article.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
-	<link rel="icon" href="img/fabicon.ico">
+	<link rel="icon" href="sp/img/fabicon.ico">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 </head>
 <body>
