--- a/sp/blog.html
+++ b/sp/blog.html
@@ -119,7 +119,7 @@
 				location.href = 'http://masason-thunderbirds.org/blog.html';
 			}
 		</script>
-		<img src="http://drive.google.com/uc?export=view&id=1MYiC1hP3mnhuyUoi8XAWvWvrL8ljCyNm" class="titlePicture">
+		<img src="img/backPicture/blog.jpeg" class="titlePicture">
 		<!-- ↓↓↓メニュー↓↓↓ -->
 		<div id="menuButton" touchstart="menuTouch()">
 			<div class="menuBer" id="menuBer0" touchstart="menuTouch()"></div>
