--- a/sp/index.html
+++ b/sp/index.html
@@ -19,7 +19,7 @@
 			}
 		</script>
 		<div class="top">
-			<img src="http://drive.google.com/uc?export=view&id=1rrXm7HCNORPnpj5CElTSue45guM_PhRL" class="titlePicture">
+			<img src="img/backPicture/top.jpeg" class="titlePicture">
 		</div>
 		<!-- ↓↓↓メニュー↓↓↓ -->
 		<div id="menuButton" touchstart="menuTouch()">
@@ -50,7 +50,7 @@
 				<div class="submenu">
 					<p class="submenuSubtitle">チーム概要</p>
 					<div class="punctuation"></div><br>
-					<img src="http://drive.google.com/uc?export=view&id=1NB7t4yfc13PdI7I20oqY6Gfy6Y5AKKZo" class="topOutlinePicture"><br>
+					<img src="img/backPicture/top-team.jpg" class="topOutlinePicture"><br>
 					<p class="subtitlesContents">　孫正義育英財団 Thunderbirdsには、それぞれの班で活躍する多彩なメンバーが所属しております。　　　　　 　　　　　　 </p>
 					<div class="punctuation1"></div><br>
 					<a href="team.html" class="showAll">〉詳しくはこちら</a>
@@ -60,7 +60,7 @@
 				<div class="submenu">
 					<p class="submenuSubtitle">ブログ</p>
 					<div class="punctuation"></div><br>
-					<img src="http://drive.google.com/uc?export=view&id=1VRclGWr51us8M027cCwbfaSZJHMf3CGM" class="topOutlinePicture"><br>
+					<img src="img/backPicture/top-blog.jpg" class="topOutlinePicture"><br>
 					<p class="subtitlesContents">　ブログを通して、チームの紹介や機体の情報を随時発信しております。ぜひ、ご一読いただき私たちの軌跡をお楽しみください。</p>
 					<div class="punctuation1"></div><br>
 					<a href="blog.html" class="showAll">〉詳しくはこちら</a>
@@ -70,7 +70,7 @@
 				<div class="submenu" style="margin-bottom: 27vw;">
 					<p class="submenuSubtitle">機体情報</p>
 					<div class="punctuation"></div><br>
-					<img src="http://drive.google.com/uc?export=view&id=1tXNJTnCTAmvZon_S3u2iz0DVdNJH0whn" class="topOutlinePicture"><br>
+					<img src="img/backPicture/top-aircraft.jpg" class="topOutlinePicture"><br>
 					<p class="subtitlesContents">現在、公開準備中です。<br>もうしばらくお待ちください。<br><br>　</p>
 					<div class="punctuation1"></div><br>
 					<a class="showAll">》COMING SOON 《</a>
