--- a/sp/team.html
+++ b/sp/team.html
@@ -41,7 +41,7 @@
 	</div>
 <!-- ↑↑↑メニュー↑↑↑ -->
 		<section style="background: hsl(0, 1%, 96%);">
-			<img src="http://drive.google.com/uc?export=view&id=1HaAwXEuvTel8kE7_Q6VnGI0ktk5CyIdq" class="titlePicture">
+			<img src="img/backPicture/team.jpeg" class="titlePicture">
 			<br><br>
 			<p class="team-beta-content">私たちは、「鳥人間コンテスト2019」への出場を通して、それぞれの想いを体現しようとしているチームです。<br>2018年に結成され、メンバーは孫正義育英財団生有志で構成されています。<br>このページでは、より応援していただけるように、メンバーや各チームリーダーの想いをご紹介しております。</p>
 			<br><br>
@@ -421,7 +421,7 @@
 		 		      </li>
 						</ul>
 					<a target="_blank" href="http://masason-foundation.org/">
-						<img src="http://drive.google.com/uc?export=view&id=1Km7t9N3ayqyxIwBaLCUDvVoBsnVnaj9F" class='MasasonHP'>
+						<img src="img/backPicture/財団HP.png" class='MasasonHP'>
 					</a>
 					<div class="outline_back_line"></div>
 			</section>
