--- a/aircraftData.html
+++ b/aircraftData.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
 		<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
-		<link rel="icon" href="img/fabicon.ico">
+		<link rel="icon" href="sp/img/fabicon.ico">
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 
@@ -96,10 +96,10 @@
 			<p class="aircraftName">Thunderbird</p>
 			<p class="aircraftContents">　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。。　ここに内容を入れていきます。　ここは１００字分のスペースを使用しています。</p><br><br><br>
 			<div class="slider" style="max-width: 90%;margin: auto;">
-				<img src="img/airplain.jpeg" height="800px" alt="">
-				<img src="img/airplain1.jpeg" height="800px" alt="">
-				<img src="img/airplain.jpeg" height="800px" alt="">
-				<img src="img/airplain1.jpeg" height="800px" alt="">
+				<img src="sp/img/airplain.jpeg" height="800px" alt="">
+				<img src="sp/img/airplain1.jpeg" height="800px" alt="">
+				<img src="sp/img/airplain.jpeg" height="800px" alt="">
+				<img src="sp/img/airplain1.jpeg" height="800px" alt="">
 			</div><br>
 			<div class="outline_back_line"></div>
 		</section>
@@ -111,9 +111,9 @@
 				<p class="outlineTitleJapanese">お問い合わせ</p><br>
 			<div style="text-align: left;position: absolute;left: 0px;top: 220px;transform: skew(0deg, 5deg);width: 100%;height: 300px;">
 					<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。</p><br>
-					<a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 50%;"></a>
+					<a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="sp/img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 50%;"></a>
 					<p class='snsIconText'>孫正義育英財団公式アカウント</p>
-					<a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="img/icons/twitterIcon.png" class="snsIcons"></a>
+					<a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="sp/img/icons/twitterIcon.png" class="snsIcons"></a>
 					<p class='snsIconText'>チームアカウント</p>
 			</div> -->
 
