--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 	<link href="css/blog.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
-	<link rel="icon" href="img/fabicon.ico">
+	<link rel="icon" href="sp/img/fabicon.ico">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script type="text/javascript">
 		let blogData = [];
@@ -120,7 +120,7 @@
 				console.log('pc');
 			}
 		</script>
-		<img src="http://drive.google.com/uc?export=view&id=1MYiC1hP3mnhuyUoi8XAWvWvrL8ljCyNm" class="titlePicture">
+		<img src="sp/img/backPicture/blog.jpeg" class="titlePicture">
 		<div class="header">
 			<nav>
 				<li class="menuberList">
@@ -204,9 +204,9 @@
 			<div style="text-align: left;position: absolute;left: 0px;top: 120px;transform: skew(0deg, 5deg);width: 100%;height: 300px;">
 				<p class="outlineTitleJapanese">お問い合わせ</p><br>
 				<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。</p><br>
-				<a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 60%;"></a>
+				<a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="sp/img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 60%;"></a>
 				<p class='snsIconText'>孫正義育英財団公式アカウント</p>
-				<a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="img/icons/twitterIcon.png" class="snsIcons"></a>
+				<a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="sp/img/icons/twitterIcon.png" class="snsIcons"></a>
 				<p class='snsIconText'>チームアカウント</p>
 			</div>
 		</div>
