--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="css/top.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
-	<link rel="icon" href="img/fabicon.ico">
+	<link rel="icon" href="sp/img/fabicon.ico">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 </head>
 <body>
@@ -20,7 +20,7 @@
 			}
 		</script>
 		<div class="top">
-			<img src="http://drive.google.com/uc?export=view&id=1rrXm7HCNORPnpj5CElTSue45guM_PhRL" class="titlePicture">
+			<img src="sp/img/backPicture/top.jpeg" class="titlePicture">
 		</div>
 
 			<div class="header">
@@ -88,7 +88,7 @@
 				<div class="submenu">
 					<p class="submenuSubtitle">チーム概要</p>
 					<div class="punctuation"></div><br>
-					<img src="http://drive.google.com/uc?export=view&id=1NB7t4yfc13PdI7I20oqY6Gfy6Y5AKKZo" class="topOutlinePicture"><br>
+					<img src="sp/img/backPicture/top-team.jpg" class="topOutlinePicture"><br>
 					<p class="subtitlesContents">　孫正義育英財団 Thunderbirdsには、それぞれの班で活躍する多彩なメンバーが所属しております。　　　　　 　　　　　　 </p>
 					<div class="punctuation1"></div><br>
 					<a href="team.html" class="showAll">〉詳しくはこちら</a>
@@ -98,7 +98,7 @@
 				<div class="submenu" style="margin-bottom: 10%;">
 					<p class="submenuSubtitle">ブログ</p>
 					<div class="punctuation"></div><br>
-					<img src="http://drive.google.com/uc?export=view&id=1VRclGWr51us8M027cCwbfaSZJHMf3CGM" class="topOutlinePicture"><br>
+					<img src="sp/img/backPicture/top-blog.jpg" class="topOutlinePicture"><br>
 					<p class="subtitlesContents">　ブログを通して、チームの紹介や機体の情報を随時発信しております。ぜひ、ご一読いただき私たちの軌跡をお楽しみください。</p>
 					<div class="punctuation1"></div><br>
 					<a href="blog.html" class="showAll">〉詳しくはこちら</a>
@@ -108,7 +108,7 @@
 				<div class="submenu">
 					<p class="submenuSubtitle">機体情報</p>
 					<div class="punctuation"></div><br>
-					<img src="http://drive.google.com/uc?export=view&id=1tXNJTnCTAmvZon_S3u2iz0DVdNJH0whn" class="topOutlinePicture"><br>
+					<img src="sp/img/backPicture/top-aircraft.jpg" class="topOutlinePicture"><br>
 					<p class="subtitlesContents">現在、公開準備中です。<br>もうしばらくお待ちください。<br><br>　</p>
 					<div class="punctuation1"></div><br>
 					<a class="showAll">》COMING SOON 《</a>
@@ -121,9 +121,9 @@
 				<div style="text-align: left;position: absolute;left: 0px;top: 120px;transform: skew(0deg, 5deg);width: 100%;height: 300px;">
 					<p class="outlineTitleJapanese">お問い合わせ</p><br>
 					<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。</p><br>
-					 <a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 60%;"></a>
+					 <a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="sp/img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 60%;"></a>
 					 <p class='snsIconText'>孫正義育英財団公式アカウント</p>
-					 <a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="img/icons/twitterIcon.png" class="snsIcons"></a>
+					 <a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="sp/img/icons/twitterIcon.png" class="snsIcons"></a>
 					 <p class='snsIconText'>チームアカウント</p>
 				</div>
 			</div>
