--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
 	<link href="css/team.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
-	<link rel="icon" href="img/fabicon.ico">
+	<link rel="icon" href="sp/img/fabicon.ico">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 </head>
 <body>
@@ -78,7 +78,7 @@
 			</nav>
 		</div>
 		<section style="background: hsl(0, 1%, 96%);">
-			<img src="http://drive.google.com/uc?export=view&id=1HaAwXEuvTel8kE7_Q6VnGI0ktk5CyIdq" class="titlePicture">
+			<img src="sp/img/backPicture/team.jpeg" class="titlePicture">
 			<br><br>
 			<p class="team-beta-content">私たちは、「鳥人間コンテスト2019」への出場を通して、それぞれの想いを体現しようとしているチームです。<br>2018年に結成され、メンバーは孫正義育英財団生有志で構成されています。<br>このページでは、より応援していただけるように、メンバーや各チームリーダーの想いをご紹介しております。</p>
 			<br><br>
@@ -86,7 +86,7 @@
 				<p style="color: #FF857A;font-size: 2vw;margin-left: 10%;">　リーダーたちの想い</p>
 			</div>
 			<div class="aboutDiv">
-				<img src="img/profile/諸澤.png" alt="" class="aboutPicturesRight">
+				<img src="sp/img/profile/諸澤.png" alt="" class="aboutPicturesRight">
 				<div class="aboutTextRight_div">
 					<p class="aboutTextRight">
 						孫正義育英財団の1期生となった2017年7月から、多様な分野で活躍する財団生たちと出会い、彼ら彼女らから幾度となく刺激を受け、その度に心が躍った。それと同時に、「ここで出会った仲間たちと何か面白いことができないものか」と考えるようになっていた。<br>そんな中、偶然テレビで「鳥人間コンテスト2018」を見かけた。そこには、参加チームそれぞれの熱いストーリーがあった。私もかけがえのない仲間たちと空を目指し、唯一無二のストーリーを作りたい。そう思った瞬間、財団生たちの顔が頭に浮かんだ。空を目指せる仲間がいた。そうして、このチームは発足した。<br><br>私たち「孫正義育英財団 Thunderbirds」は、この夏、琵琶湖で「空を飛ぶこと」に本気で挑戦します。<br>
@@ -94,7 +94,7 @@
 				</div>
 			</div>
 			<div class="aboutDiv">
-				<img src="img/profile/大澤.png" alt="" class="aboutPicturesLeft">
+				<img src="sp/img/profile/大澤.png" alt="" class="aboutPicturesLeft">
 				<div class="aboutTextLeft_div">
 					<p class="aboutTextLeft">
 						僕の成し遂げたい志は、ドラえもんをつくること。小学生の頃からその思いをずっと持ち続けてきた。<br>僕は空を飛びたいと思ったことはなかった。いきなり訳も分からず「やってくれ」と言われ、当初はピンとこず、本気で言っているのかと探り探りだった。振り返ればあの頃は、財団の全員がお互いに探り探りだった。自分だけやる気になって、周りがついてこなかったらやるせない。そんな感じがしていた。<br>でも、ある時なぜだかわからないが、僕はこう思った。<br>「自分が先陣を切って本気になって、その本気さでみんなを本気にしよう。」<br>僕が自転車を漕いで、プロペラが回って、飛行機の動力を生んで飛ぶのではなく、僕が自転車を漕ぐ本気さで、人が回って、チームの動力を生んで空を飛ぶ。そんなことができたら、ドラえもんをつくる最大の武器を手に入れられる気がしたのだ。
@@ -103,7 +103,7 @@
 			</div>
 
 			<div class="aboutDiv">
-				<img src="img/profile/五十嵐.png" alt="" class="aboutPicturesRight">
+				<img src="sp/img/profile/五十嵐.png" alt="" class="aboutPicturesRight">
 				<div class="aboutTextRight_div">
 					<p class="aboutTextRight">
 						頭で思い描く「アイデア」や形を持たない「かたち」、これらに「形」を与え、マテリアリティを帯びた「もの」として現実世界に呼び出す「ものづくり」という営みは、強大な「力」である。人が望むありようにリアルを改変するこの営為は、その強大さゆえときに暴力ともなり得る。<br>この「力」がもつ可能性は果てしない。その強大さを飼いならしたとき、幾億年の進化の過程を一足飛びに、人は空をも飛べてしまうのだから。<br>その計り知れない強大さに、尻込みしてしまう
@@ -119,7 +119,7 @@
 				<li class="scroll_item">
 						<a class="scroll_item_inr">
 								<div class="scroll_item_thum">
-										<img src="img/profile/大澤正彦.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+										<img src="sp/img/profile/大澤正彦.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 								</div>
 								<div class="scroll_item_info">
 										<h4 class="scroll_item_ttl">大澤 正彦</h4><br>
@@ -132,7 +132,7 @@
 			 <li class="scroll_item">
 						<a class="scroll_item_inr">
 								<div class="scroll_item_thum">
-										<img src="img/profile/佐藤正幸.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+										<img src="sp/img/profile/佐藤正幸.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 								</div>
 								<div class="scroll_item_info">
 										<h4 class="scroll_item_ttl">佐藤 正幸</h4><br>
@@ -145,7 +145,7 @@
 			  <li class="scroll_item" style="margin-right: 0%;">
 						<a class="scroll_item_inr">
 								<div class="scroll_item_thum">
-										<img src="img/profile/檜垣大峯.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+										<img src="sp/img/profile/檜垣大峯.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 								</div>
 								<div class="scroll_item_info">
 										<h4 class="scroll_item_ttl">檜垣 大峯</h4><br>
@@ -161,7 +161,7 @@
 	        <li class="scroll_item">
 	            <a class="scroll_item_inr">
 	                <div class="scroll_item_thum">
-	                    <img src="img/profile/諸澤正樹.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+	                    <img src="sp/img/profile/諸澤正樹.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 	                </div>
 	                <div class="scroll_item_info">
 	                    <h4 class="scroll_item_ttl">諸澤 正樹</h4><br>
@@ -174,7 +174,7 @@
 	       <li class="scroll_item">
 	            <a class="scroll_item_inr">
 	                <div class="scroll_item_thum">
-	                    <img src="img/profile/野寄修平.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+	                    <img src="sp/img/profile/野寄修平.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 	                </div>
 	                <div class="scroll_item_info">
 	                    <h4 class="scroll_item_ttl">野寄 修平</h4><br>
@@ -187,7 +187,7 @@
 					<li class="scroll_item" style="margin-right: 0%;">
  	            <a class="scroll_item_inr">
  	                <div class="scroll_item_thum">
- 	                    <img src="img/profile/伊藤有羽.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+ 	                    <img src="sp/img/profile/伊藤有羽.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
  	                </div>
  	                <div class="scroll_item_info">
  	                    <h4 class="scroll_item_ttl">伊藤 有羽</h4><br>
@@ -203,7 +203,7 @@
 					<li class="scroll_item">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
-											<img src="img/profile/五十嵐宇晴.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+											<img src="sp/img/profile/五十嵐宇晴.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 									</div>
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">五十嵐 宇晴</h4><br>
@@ -216,7 +216,7 @@
 				 <li class="scroll_item">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
-											<img src="img/profile/ユング開.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+											<img src="sp/img/profile/ユング開.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 									</div>
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">ユング 開</h4><br>
@@ -229,7 +229,7 @@
 				 <li class="scroll_item">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
-											<img src="img/profile/田渕宏太朗.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+											<img src="sp/img/profile/田渕宏太朗.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 									</div>
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">田渕 宏太朗</h4><br>
@@ -242,7 +242,7 @@
 					<li class="scroll_item" style="margin-right: 0%;">
  							<a class="scroll_item_inr">
  									<div class="scroll_item_thum">
- 											<img src="img/profile/徐立元.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+ 											<img src="sp/img/profile/徐立元.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
  									</div>
  									<div class="scroll_item_info">
  											<h4 class="scroll_item_ttl"> 徐 立元</h4><br>
@@ -258,7 +258,7 @@
 				 <li class="scroll_item">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
-											<img src="img/profile/藤田恭平.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+											<img src="sp/img/profile/藤田恭平.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 									</div>
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">藤田 恭平</h4><br>
@@ -271,7 +271,7 @@
 					<li class="scroll_item">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
-											<img src="img/profile/高橋唯基.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+											<img src="sp/img/profile/高橋唯基.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 									</div>
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">高橋 唯基</h4><br>
@@ -284,7 +284,7 @@
 					<li class="scroll_item">
  							<a class="scroll_item_inr">
  									<div class="scroll_item_thum">
- 											<img src="img/profile/仮.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+ 											<img src="sp/img/profile/仮.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
  									</div>
  									<div class="scroll_item_info">
  											<h4 class="scroll_item_ttl">西田 圭吾</h4><br>
@@ -297,7 +297,7 @@
 					<li class="scroll_item" style="margin-right: 0%;">
 							<a class="scroll_item_inr">
 									<div class="scroll_item_thum">
-											<img src="img/profile/仮.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+											<img src="sp/img/profile/仮.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 									</div>
 									<div class="scroll_item_info">
 											<h4 class="scroll_item_ttl">八木 拓真</h4><br>
@@ -313,7 +313,7 @@
 			      <li class="scroll_item">
 			          <a class="scroll_item_inr">
 			              <div class="scroll_item_thum">
-			                  <img src="img/profile/谷澤文礼.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+			                  <img src="sp/img/profile/谷澤文礼.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 			              </div>
 			              <div class="scroll_item_info">
 			                  <h4 class="scroll_item_ttl">谷澤 文礼</h4><br>
@@ -326,7 +326,7 @@
 			     <li class="scroll_item">
 			          <a class="scroll_item_inr">
 			              <div class="scroll_item_thum">
-			                  <img src="img/profile/大塚嶺.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+			                  <img src="sp/img/profile/大塚嶺.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 			              </div>
 			              <div class="scroll_item_info">
 			                  <h4 class="scroll_item_ttl">大塚 嶺</h4><br>
@@ -339,7 +339,7 @@
 						<li class="scroll_item">
 	 		          <a class="scroll_item_inr">
 	 		              <div class="scroll_item_thum">
-	 		                  <img src="img/profile/七條ありさ.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+	 		                  <img src="sp/img/profile/七條ありさ.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 	 		              </div>
 	 		              <div class="scroll_item_info">
 	 		                  <h4 class="scroll_item_ttl">七條 ありさ</h4><br>
@@ -352,7 +352,7 @@
 						<li class="scroll_item">
 	 		          <a class="scroll_item_inr">
 	 		              <div class="scroll_item_thum">
-	 		                  <img src="img/profile/久保田しおん.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+	 		                  <img src="sp/img/profile/久保田しおん.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 	 		              </div>
 	 		              <div class="scroll_item_info">
 	 		                  <h4 class="scroll_item_ttl">久保田 しおん</h4><br>
@@ -365,7 +365,7 @@
 						<li class="scroll_item">
 	 		          <a class="scroll_item_inr">
 	 		              <div class="scroll_item_thum">
-	 		                  <img src="img/profile/徐亜斗香.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+	 		                  <img src="sp/img/profile/徐亜斗香.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 	 		              </div>
 	 		              <div class="scroll_item_info">
 	 		                  <h4 class="scroll_item_ttl">徐 亜斗香</h4><br>
@@ -378,7 +378,7 @@
 						<li class="scroll_item">
 	 		          <a class="scroll_item_inr">
 	 		              <div class="scroll_item_thum">
-	 		                  <img src="img/profile/佐藤和音.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+	 		                  <img src="sp/img/profile/佐藤和音.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 	 		              </div>
 	 		              <div class="scroll_item_info">
 	 		                  <h4 class="scroll_item_ttl">佐藤 和音</h4><br>
@@ -394,7 +394,7 @@
 				      <li class="scroll_item">
 				          <a class="scroll_item_inr">
 				              <div class="scroll_item_thum">
-				                  <img src="img/profile/水上颯.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+				                  <img src="sp/img/profile/水上颯.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 				              </div>
 				              <div class="scroll_item_info">
 				                  <h4 class="scroll_item_ttl">水上 颯</h4><br>
@@ -407,7 +407,7 @@
 							<li class="scroll_item">
 				          <a class="scroll_item_inr">
 				              <div class="scroll_item_thum">
-				                  <img src="img/profile/小松詩織.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+				                  <img src="sp/img/profile/小松詩織.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 				              </div>
 				              <div class="scroll_item_info">
 				                  <h4 class="scroll_item_ttl">小松 詩織</h4><br>
@@ -420,7 +420,7 @@
 							<li class="scroll_item">
 				          <a class="scroll_item_inr">
 				              <div class="scroll_item_thum">
-				                  <img src="img/profile/三上智之.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+				                  <img src="sp/img/profile/三上智之.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 				              </div>
 				              <div class="scroll_item_info">
 				                  <h4 class="scroll_item_ttl">三上 智之</h4><br>
@@ -433,7 +433,7 @@
 				     <li class="scroll_item">
 				          <a class="scroll_item_inr">
 				              <div class="scroll_item_thum">
-				                  <img src="img/profile/依田和樹.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+				                  <img src="sp/img/profile/依田和樹.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 				              </div>
 				              <div class="scroll_item_info">
 				                  <h4 class="scroll_item_ttl">依田 和樹</h4><br>
@@ -446,7 +446,7 @@
 							<li class="scroll_item" style="margin-right: 0%;">
 		 		          <a class="scroll_item_inr">
 		 		              <div class="scroll_item_thum">
-		 		                  <img src="img/profile/矢嶋花菜.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
+		 		                  <img src="sp/img/profile/矢嶋花菜.png" alt="" width="100%" class="alignnone size-medium wp-image-986"/>
 		 		              </div>
 		 		              <div class="scroll_item_info">
 		 		                  <h4 class="scroll_item_ttl">矢嶋 花菜</h4><br>
@@ -458,7 +458,7 @@
 		 		      </li>
 						</ul>
 					<a target="_blank" href="http://masason-foundation.org/">
-						<img src="http://drive.google.com/uc?export=view&id=1Km7t9N3ayqyxIwBaLCUDvVoBsnVnaj9F" class='MasasonHP'>
+						<img src="sp/img/backPicture/財団HP.png" class='MasasonHP'>
 					</a>
 					<div class="outline_back_line"></div>
 			</section>
@@ -467,9 +467,9 @@
 				<div style="text-align: left;position: absolute;left: 0px;top: 120px;transform: skew(0deg, 5deg);width: 100%;height: 300px;">
 					<p class="outlineTitleJapanese">お問い合わせ</p><br>
 					<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。</p><br>
-					<a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 60%;"></a>
+					<a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="sp/img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 60%;"></a>
 					<p class='snsIconText'>孫正義育英財団公式アカウント</p>
-					<a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="img/icons/twitterIcon.png" class="snsIcons"></a>
+					<a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="sp/img/icons/twitterIcon.png" class="snsIcons"></a>
 					<p class='snsIconText'>チームアカウント</p>
 				</div>
 			</div>
