--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
 			<div style="background: hsl(0, 1%, 96%); overflow: hidden;margin-top: 100vh;">
 				<br><br>
-				<p class="top-beta-content"> 私たちは、「鳥人間コンテスト2019」への出場を通して、それぞれの想いを体現しようとしているチームです。<br> 2018年に結成され、メンバーは孫正義育英財団生有志で構成されています。</p>
+				<p class="top-beta-content"> 私たちは、「鳥人間コンテスト2019」への出場を通して、それぞれの想いを体現しようとしているチームです。<br> 2018年に結成され、メンバーは孫正義育英財団生有志で構成されています。<br><br>公益財団法人 孫正義育英財団が運営する公式サイトではありません。孫正義育英財団生個人の取り組みとして、財団生が運営するサイトです。</p>
 				<div class="submenu">
 					<p class="submenuSubtitle">チーム概要</p>
 					<div class="punctuation"></div><br>
@@ -120,7 +120,7 @@
 			<div class="outline_back">
 				<div style="text-align: left;position: absolute;left: 0px;top: 120px;transform: skew(0deg, 5deg);width: 100%;height: 300px;">
 					<p class="outlineTitleJapanese">お問い合わせ</p><br>
-					<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。</p><br>
+					<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。<br><br><br>公益財団法人 孫正義育英財団が運営する公式サイトではありません。孫正義育英財団生個人の取り組みとして、財団生が運営するサイトです。</p><br>
 					 <a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="sp/img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 60%;"></a>
 					 <p class='snsIconText'>孫正義育英財団公式アカウント</p>
 					 <a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="sp/img/icons/twitterIcon.png" class="snsIcons"></a>
