--- a/sp/aircraftData.html
+++ b/sp/aircraftData.html
@@ -73,7 +73,7 @@
 			<div class="outline_back">
 				<p class="outlineTitleJapanese">お問い合わせ</p><br>
 			<div style="text-align: left;position: absolute;left: 0px;top: 220px;transform: skew(0deg, 5deg);width: 100%;height: 300px;">
-					<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。</p><br>
+					<p class="outlineContents">Email:  info@masason-thunderbirds.org<br>本プロジェクトに関するお問い合わせ、取材のご依頼、応援メッセージなどは上記のメールアドレスまでご連絡ください。<br>数日以内に担当者が確認の上、ご返答差し上げます。<br><br><br>公益財団法人 孫正義育英財団が運営する公式サイトではありません。孫正義育英財団生個人の取り組みとして、財団生が運営するサイトです。</p><br>
 					<a target="_blank" href="https://www.facebook.com/masasonfoundation/"><img src="img/icons/facebookIcon.png" class="snsIcons" style="margin-left: 50%;"></a>
 					<p class='snsIconText'>孫正義育英財団公式アカウント</p>
 					<a target="_blank" href="https://twitter.com/Masason_birdmen"><img src="img/icons/twitterIcon.png" class="snsIcons"></a>
