--- a/blog.html
+++ b/blog.html
@@ -186,7 +186,7 @@
 		<section class="blogSecion">
 			<div id="data" style="display:none;"/></div>
 			<br><br>
-			<p class="blog-beta-content">ブログを通して、チームの紹介や機体の情報を随時発信しております。<br> ぜひ、ご一読いただき私たちの軌跡をお楽しみください。<br><br>タグ#を選択すると該当の記事の一覧がご覧いただけます。</p>
+			<p class="blog-beta-content">ブログを通して、チームの紹介や機体の情報を随時発信しております。<br> ぜひ、ご一読いただき私たちの軌跡をお楽しみください。<br><br>タグ#を選択すると該当の記事の一覧がご覧いただけます。<br><br>公益財団法人 孫正義育英財団が運営する公式サイトではありません。孫正義育英財団生個人の取り組みとして、財団生が運営するサイトです。</p>
 			<br><br>
 			<div style="margin-top: 5%;overflow: hidden;">
 				<p id="selectTags"><span class='selectTag' onclick='setTag(0)'>#新着</span>　　<span class='selectTag' onclick='setTag(1)'>#パイロット</span>　　<span class='selectTag' onclick='setTag(2)'>#リスク管理</span>　　<span class='selectTag' onclick='setTag(3)'>#設計・電装</span>　　
