--- a/team.html
+++ b/team.html
@@ -460,6 +460,7 @@
 					<a target="_blank" href="http://masason-foundation.org/">
 						<img src="sp/img/backPicture/財団HP.png" class='MasasonHP'>
 					</a>
+					<p style='font-size: 1.35vw;margin-left: 5.5%;margin-top: 3vh;margin-right: 5.5%;text-align: center;'>公益財団法人 孫正義育英財団が運営する公式サイトではありません。孫正義育英財団生個人の取り組みとして、財団生が運営するサイトです。</p>
 					<div class="outline_back_line"></div>
 			</section>
 
