--- a/sp/blog.html
+++ b/sp/blog.html
@@ -148,7 +148,7 @@
 		<section class="blogSecion">
 			<div id="data" style="display:none;"/></div>
 			<br><br>
-			<p class="blog-beta-content">ブログを通して、チームの紹介や機体の情報を随時発信しております。<br> ぜひ、ご一読いただき私たちの軌跡をお楽しみください。<br><br>タグ#を選択すると該当の記事の一覧がご覧いただけます。</p>
+			<p class="blog-beta-content">ブログを通して、チームの紹介や機体の情報を随時発信しております。<br> ぜひ、ご一読いただき私たちの軌跡をお楽しみください。<br><br>タグ#を選択すると該当の記事の一覧がご覧いただけます。<br><br>公益財団法人 孫正義育英財団が運営する公式サイトではありません。孫正義育英財団生個人の取り組みとして、財団生が運営するサイトです。</p>
 			<br><br>
 			<div style="margin-top: 5%;overflow: hidden;">
 				<div class="select-box">
